fdo#66827 sw: rename SID_ATTR_FILL_GRADIENT to SID_SW_ATTR_FILL_GRADIENT

Change-Id: Ieff7fc6a5b718e11de7d1e4ec2087d64a8a13cae